I implemented some lines of code.
I added a table for arranging the printed or entered data.

--- a/add client.html
+++ b/add client.html
@@ -91,7 +91,18 @@
               </tr>
             </tbody>
           </table>
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">client name</th>
+              <th scope="col" class="form-h-row">address</th>
+              <th scope="col" class="form-h-row">client's cell num</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
