--- a/add employee.html
+++ b/add employee.html
@@ -101,7 +101,19 @@
               </tr>
             </tbody>
           </table>
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">employee name</th>
+              <th scope="col" class="form-h-row">designation</th>
+              <th scope="col" class="form-h-row">emp's cell num</th>
+              <th scope="col" class="form-h-row">emp's salary</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
