--- a/add product.html
+++ b/add product.html
@@ -121,7 +121,21 @@
             </tbody>
           </table>
 
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">product name</th>
+              <th scope="col" class="form-h-row">product size</th>
+              <th scope="col" class="form-h-row">num of bundles</th>
+              <th scope="col" class="form-h-row">KGs</th>
+              <th scope="col" class="form-h-row">price</th>
+              <th scope="col" class="form-h-row">total price</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
