--- a/vendor's transaction.html
+++ b/vendor's transaction.html
@@ -142,7 +142,22 @@
             </tbody>
           </table>
 
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">product</th>
+              <th scope="col" class="form-h-row">bags</th>
+              <th scope="col" class="form-h-row">bags weight</th>
+              <th scope="col" class="form-h-row">price</th>
+              <th scope="col" class="form-h-row">total price</th>
+              <th scope="col" class="form-h-row">amount payable</th>
+              <th scope="col" class="form-h-row">advance payment</th>
+              <th scope="col" class="form-h-row">outstanding payable</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
