--- a/client's entry.html
+++ b/client's entry.html
@@ -141,7 +141,24 @@
               </tr>
             </tbody>
           </table>
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">product</th>
+              <th scope="col" class="form-h-row">size</th>
+              <th scope="col" class="form-h-row">bundles</th>
+              <th scope="col" class="form-h-row">FT</th>
+              <th scope="col" class="form-h-row">price</th>
+              <th scope="col" class="form-h-row">total price</th>
+              <th scope="col" class="form-h-row">amount receivable</th>
+              <th scope="col" class="form-h-row">received by client</th>
+              <th scope="col" class="form-h-row">outstanding amount</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
