--- a/payroll entry.html
+++ b/payroll entry.html
@@ -138,7 +138,23 @@
             </tbody>
           </table>
 
-          <div class="col-12 added-data-ctnr"></div>
+          <table class="mt-5 table">
+            <thead>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">employee name</th>
+              <th scope="col" class="form-h-row">designation</th>
+              <th scope="col" class="form-h-row">month working days</th>
+              <th scope="col" class="form-h-row">emp working days</th>
+              <th scope="col" class="form-h-row">leaves</th>
+              <th scope="col" class="form-h-row">salary</th>
+              <th scope="col" class="form-h-row">advance</th>
+              <th scope="col" class="form-h-row">net salary</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </thead>
+
+            <tbody class="added-data-ctnr mt-5"></tbody>
+          </table>
         </form>
       </section>
     </div>
